categories, receipt angular end